# hamper

./: .gitignore  meson.build
include/: alley.h  animation.h  editor.h  entity.h  gamestate.h  hamster.h  item.h  keybind.h  keybinds.h  levels.h  menu.h  resources.h  tilemap.h
include/entities/: hamster.h
include/scenes/: editor.h
include/ui/: button.h  inputfield.h  level_selector.h
resources/: hamster.xcf  terrain.xcf  test2  test_tmp
resources/levels/: test  test_dick  test_menu  test_tmp
resources/levels/core/: test_tmp
resources/sounds/: draw.aup3  draw.aup3-shm  draw.aup3-wal  draw3.aup3  jump.aup3  sounds.aup3-shm  sounds.aup3-wal  sounds.m4a  walk.aup3
resources/textures/: cursor.xcf  entities.kra  entities.kra~  entities.png~  items.kra  orb.xcf  players.xcf
src/: alley.c  animation.c  button.c  editor.c  entity.c  gamestate.c  hamster.c  item.c  keybind.c  keybinds.c  levels.c  main.c  menu.c  resources.c  tilemap.c
src/entities/: alley.c  entity.c  hamster.c
src/scenes/: editor.c  menu.c
src/ui/: button.c  inputfield.c  level_selector.c
